# amz-sif-crawler

./: .dockerignore  .gitignore  Dockerfile  MCP_VALIDATION.md  README.md  SKILL.md  amazon_js_fetcher.py  amazon_login.py  clear_cache.py  crawl_once.py  crawler_worker.py  daemon_server.py  daily_asin_list.py  daily_report.py  debug_open_sif.py  deploy.sh  docker-compose.yml  docker_deploy.sh  ecosystem.config.json  inspect_sif_dom_cells.py  inspect_sif_extract.py  inspect_sif_page.py  mcp_gateway.py  mcp_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_profiles.py  sif_login.py  sif_query.py  sif_runtime.py
archive_ref_2026-04-02/: inspect_crawl4ai.py  local_cluster_test.sh  test_sif_login.py  test_worker.py  test_worker_results.json
archive_ref_2026-04-02/.old/: mcp_amazon_sif.py  sif.py  zb.py
config/: daily_bindings.json  settings.json
daemon/: __init__.py  browser_daemon.py  config.py  http_api.py  providers.py
k8s/: README.md  amazon-worker-deployment.yaml  configmap.yaml  gateway-deployment.yaml  kustomization.yaml  namespace.yaml  pvc-example.yaml  services.yaml  sif-worker-deployment.yaml
scripts/: build_k8s_images.sh  crawl.sh  daily_asin_list  daily_report.sh  debug_sif_page.py  deploy_k8s.sh  migrate_legacy_data.sh  profile_bundle.sh  pull_from_gkb_subtree.sh  setup_amazon_manual.sh  setup_sif_manual.sh  sync_to_gkb_subtree.sh  test.sh  validate_mcp.py  worker_entrypoint.sh
skills/gkb-subtree-sync/: SKILL.md
tests/: test_api.py  test_daily_cli.py  test_service.py  test_sif_auth.py  test_utils.py
(+20 files in other folders)
